--- a/App.config
+++ b/App.config
@@ -2,6 +2,7 @@
 <configuration>
     <configSections>
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+            <section name="Retriever.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
             <section name="heaven.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
         </sectionGroup>
     </configSections>
@@ -25,6 +26,23 @@
        </assemblyBinding>  
   </runtime>
   <userSettings>
+    <Retriever.Properties.Settings>
+      <setting name="AccessKeyID" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="SecretAccessKey" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="PageSize" serializeAs="String">
+        <value>18</value>
+      </setting>
+      <setting name="ConcurrentConnecitons" serializeAs="String">
+        <value>15</value>
+      </setting>
+      <setting name="Timeout" serializeAs="String">
+        <value>900000</value>
+      </setting>
+    </Retriever.Properties.Settings>
     <heaven.Properties.Settings>
       <setting name="AccessKeyID" serializeAs="String">
         <value/>
