--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,7 +10,7 @@ pool:
   vmImage: 'VS2017-Win2016'
 
 variables:
-  solution: '**/*.sln'
+  solution: 'AWSRetriever.sln'
   buildPlatform: 'Any CPU'
   buildConfiguration: 'Release'
 
