--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "aws-sdk-net"]
 	path = aws-sdk-net
 	url = https://github.com/aws/aws-sdk-net.git
+[submodule "ModernUIDoneRight"]
+	path = ModernUIDoneRight
+	url = https://github.com/NickAcPT/ModernUIDoneRight.git
