fixes upon testing

--- a/Retriever/App.config
+++ b/Retriever/App.config
@@ -42,6 +42,9 @@
       <setting name="Timeout" serializeAs="String">
         <value>900000</value>
       </setting>
+      <setting name="Profile" serializeAs="String">
+        <value>default.profile.js</value>
+      </setting>
     </Retriever.Properties.Settings>
     <heaven.Properties.Settings>
       <setting name="AccessKeyID" serializeAs="String">
