--- a/Retriever/Properties/Settings.settings
+++ b/Retriever/Properties/Settings.settings
@@ -17,5 +17,8 @@
     <Setting Name="Timeout" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">900000</Value>
     </Setting>
+    <Setting Name="Profile" Type="System.String" Scope="User">
+      <Value Profile="(Default)">default.profile.js</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
