minor bug fixes after testing

--- a/Retriever/App.config
+++ b/Retriever/App.config
@@ -45,6 +45,21 @@
       <setting name="Profile" serializeAs="String">
         <value>default.profile.js</value>
       </setting>
+      <setting name="AWSUser" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="ProxyHost" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="ProxyPort" serializeAs="String">
+        <value>1080</value>
+      </setting>
+      <setting name="ProxyUser" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="ProxyPassword" serializeAs="String">
+        <value />
+      </setting>
     </Retriever.Properties.Settings>
     <heaven.Properties.Settings>
       <setting name="AccessKeyID" serializeAs="String">
