--- a/Retriever/Properties/Settings.settings
+++ b/Retriever/Properties/Settings.settings
@@ -20,5 +20,20 @@
     <Setting Name="Profile" Type="System.String" Scope="User">
       <Value Profile="(Default)">default.profile.js</Value>
     </Setting>
+    <Setting Name="AWSUser" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="ProxyHost" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="ProxyPort" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">1080</Value>
+    </Setting>
+    <Setting Name="ProxyUser" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="ProxyPassword" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
