--- a/CloudOps/packages.config
+++ b/CloudOps/packages.config
@@ -1,4 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net461" />
+  <package id="AWSSDK.Core" version="3.3.31.7" targetFramework="net45" />
+  <package id="AWSSDK.S3" version="3.3.31.15" targetFramework="net45" />
+  <package id="AWSSDK.CloudFront" version="3.3.11.16" targetFramework="net45" />
+  <package id="AWSSDK.SQS" version="3.3.3.54" targetFramework="net45" />
 </packages>
