--- a/CloudOps/packages.config
+++ b/CloudOps/packages.config
@@ -1,8 +1,155 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net461" />
-  <package id="AWSSDK.Core" version="3.3.31.7" targetFramework="net45" />
-  <package id="AWSSDK.S3" version="3.3.31.15" targetFramework="net45" />
+  <package id="AWSSDK.ACMPCA" version="3.3.3.3" targetFramework="net45" />
+  <package id="AWSSDK.AlexaForBusiness" version="3.3.8.12" targetFramework="net45" />
+  <package id="AWSSDK.APIGateway" version="3.3.23.23" targetFramework="net45" />
+  <package id="AWSSDK.ApplicationAutoScaling" version="3.3.10.45" targetFramework="net45" />
+  <package id="AWSSDK.ApplicationDiscoveryService" version="3.3.6.4" targetFramework="net45" />
+  <package id="AWSSDK.AppStream" version="3.3.20.4" targetFramework="net45" />
+  <package id="AWSSDK.AppSync" version="3.3.4.16" targetFramework="net45" />
+  <package id="AWSSDK.Athena" version="3.3.1.32" targetFramework="net45" />
+  <package id="AWSSDK.AutoScaling" version="3.3.8.18" targetFramework="net45" />
+  <package id="AWSSDK.AutoScalingPlans" version="3.3.2.16" targetFramework="net45" />
+  <package id="AWSSDK.AWSHealth" version="3.3.2.15" targetFramework="net45" />
+  <package id="AWSSDK.AWSMarketplaceCommerceAnalytics" version="3.3.3.67" targetFramework="net45" />
+  <package id="AWSSDK.AWSMarketplaceMetering" version="3.3.2.16" targetFramework="net45" />
+  <package id="AWSSDK.AWSSupport" version="3.3.0.75" targetFramework="net45" />
+  <package id="AWSSDK.Batch" version="3.3.7.16" targetFramework="net45" />
+  <package id="AWSSDK.Budgets" version="3.3.10.20" targetFramework="net45" />
+  <package id="AWSSDK.CertificateManager" version="3.3.5.50" targetFramework="net45" />
+  <package id="AWSSDK.Chime" version="3.3.1.19" targetFramework="net45" />
+  <package id="AWSSDK.Cloud9" version="3.3.0.53" targetFramework="net45" />
+  <package id="AWSSDK.CloudDirectory" version="3.3.10.25" targetFramework="net45" />
+  <package id="AWSSDK.CloudFormation" version="3.3.13.16" targetFramework="net45" />
   <package id="AWSSDK.CloudFront" version="3.3.11.16" targetFramework="net45" />
+  <package id="AWSSDK.CloudHSM" version="3.3.0.77" targetFramework="net45" />
+  <package id="AWSSDK.CloudHSMV2" version="3.3.3.35" targetFramework="net45" />
+  <package id="AWSSDK.CloudSearch" version="3.3.0.75" targetFramework="net45" />
+  <package id="AWSSDK.CloudSearchDomain" version="3.3.0.75" targetFramework="net45" />
+  <package id="AWSSDK.CloudTrail" version="3.3.4.16" targetFramework="net45" />
+  <package id="AWSSDK.CloudWatch" version="3.3.10.16" targetFramework="net45" />
+  <package id="AWSSDK.CloudWatchEvents" version="3.3.8.16" targetFramework="net45" />
+  <package id="AWSSDK.CloudWatchLogs" version="3.3.7.16" targetFramework="net45" />
+  <package id="AWSSDK.CodeBuild" version="3.3.20.2" targetFramework="net45" />
+  <package id="AWSSDK.CodeCommit" version="3.3.8" targetFramework="net45" />
+  <package id="AWSSDK.CodeDeploy" version="3.3.12.16" targetFramework="net45" />
+  <package id="AWSSDK.CodePipeline" version="3.3.6.20" targetFramework="net45" />
+  <package id="AWSSDK.CodeStar" version="3.3.3.29" targetFramework="net45" />
+  <package id="AWSSDK.CognitoIdentity" version="3.3.2.69" targetFramework="net45" />
+  <package id="AWSSDK.CognitoIdentityProvider" version="3.3.12.12" targetFramework="net45" />
+  <package id="AWSSDK.CognitoSync" version="3.3.1.78" targetFramework="net45" />
+  <package id="AWSSDK.Comprehend" version="3.3.6.12" targetFramework="net45" />
+  <package id="AWSSDK.ConfigService" version="3.3.22.16" targetFramework="net45" />
+  <package id="AWSSDK.Connect" version="3.3.4.14" targetFramework="net45" />
+  <package id="AWSSDK.Core" version="3.3.31.7" targetFramework="net45" />
+  <package id="AWSSDK.CostAndUsageReport" version="3.3.0.69" targetFramework="net45" />
+  <package id="AWSSDK.CostExplorer" version="3.3.9.16" targetFramework="net45" />
+  <package id="AWSSDK.DatabaseMigrationService" version="3.3.13.4" targetFramework="net45" />
+  <package id="AWSSDK.DataPipeline" version="3.3.0.75" targetFramework="net45" />
+  <package id="AWSSDK.DAX" version="3.3.1.40" targetFramework="net45" />
+  <package id="AWSSDK.DeviceFarm" version="3.3.13.1" targetFramework="net45" />
+  <package id="AWSSDK.DirectConnect" version="3.3.9.17" targetFramework="net45" />
+  <package id="AWSSDK.DirectoryService" version="3.3.8.33" targetFramework="net45" />
+  <package id="AWSSDK.DLM" version="3.3.1.21" targetFramework="net45" />
+  <package id="AWSSDK.DynamoDBv2" version="3.3.17.5" targetFramework="net45" />
+  <package id="AWSSDK.EC2" version="3.3.81" targetFramework="net45" />
+  <package id="AWSSDK.ECR" version="3.3.5.2" targetFramework="net45" />
+  <package id="AWSSDK.ECS" version="3.3.22" targetFramework="net45" />
+  <package id="AWSSDK.EKS" version="3.3.3.14" targetFramework="net45" />
+  <package id="AWSSDK.ElastiCache" version="3.3.7.30" targetFramework="net45" />
+  <package id="AWSSDK.ElasticBeanstalk" version="3.3.12.12" targetFramework="net45" />
+  <package id="AWSSDK.ElasticFileSystem" version="3.3.2.43" targetFramework="net45" />
+  <package id="AWSSDK.ElasticLoadBalancing" version="3.3.3.37" targetFramework="net45" />
+  <package id="AWSSDK.ElasticLoadBalancingV2" version="3.3.13.2" targetFramework="net45" />
+  <package id="AWSSDK.ElasticMapReduce" version="3.3.6.38" targetFramework="net45" />
+  <package id="AWSSDK.Elasticsearch" version="3.3.10.32" targetFramework="net45" />
+  <package id="AWSSDK.ElasticTranscoder" version="3.3.3.35" targetFramework="net45" />
+  <package id="AWSSDK.FMS" version="3.3.2.4" targetFramework="net45" />
+  <package id="AWSSDK.GameLift" version="3.3.12.47" targetFramework="net45" />
+  <package id="AWSSDK.Glacier" version="3.3.2.55" targetFramework="net45" />
+  <package id="AWSSDK.Glue" version="3.3.17.4" targetFramework="net45" />
+  <package id="AWSSDK.Greengrass" version="3.3.5.16" targetFramework="net45" />
+  <package id="AWSSDK.GuardDuty" version="3.3.5.34" targetFramework="net45" />
+  <package id="AWSSDK.IdentityManagement" version="3.3.9.15" targetFramework="net45" />
+  <package id="AWSSDK.ImportExport" version="3.3.0.76" targetFramework="net45" />
+  <package id="AWSSDK.Inspector" version="3.3.8.29" targetFramework="net45" />
+  <package id="AWSSDK.IoT" version="3.3.23.5" targetFramework="net45" />
+  <package id="AWSSDK.IoT1ClickDevicesService" version="3.3.1.30" targetFramework="net45" />
+  <package id="AWSSDK.IoT1ClickProjects" version="3.3.0.47" targetFramework="net45" />
+  <package id="AWSSDK.IoTAnalytics" version="3.3.7.9" targetFramework="net45" />
+  <package id="AWSSDK.IotData" version="3.3.0.76" targetFramework="net45" />
+  <package id="AWSSDK.IoTJobsDataPlane" version="3.3.1.32" targetFramework="net45" />
+  <package id="AWSSDK.KeyManagementService" version="3.3.7.16" targetFramework="net45" />
+  <package id="AWSSDK.Kinesis" version="3.3.6.41" targetFramework="net45" />
+  <package id="AWSSDK.KinesisAnalytics" version="3.3.5.16" targetFramework="net45" />
+  <package id="AWSSDK.KinesisFirehose" version="3.3.8.12" targetFramework="net45" />
+  <package id="AWSSDK.KinesisVideo" version="3.3.1.43" targetFramework="net45" />
+  <package id="AWSSDK.KinesisVideoArchivedMedia" version="3.3.1.43" targetFramework="net45" />
+  <package id="AWSSDK.KinesisVideoMedia" version="3.3.0.52" targetFramework="net45" />
+  <package id="AWSSDK.Lambda" version="3.3.19.16" targetFramework="net45" />
+  <package id="AWSSDK.Lex" version="3.3.3.52" targetFramework="net45" />
+  <package id="AWSSDK.LexModelBuildingService" version="3.3.7.38" targetFramework="net45" />
+  <package id="AWSSDK.Lightsail" version="3.3.9.4" targetFramework="net45" />
+  <package id="AWSSDK.MachineLearning" version="3.3.0.75" targetFramework="net45" />
+  <package id="AWSSDK.Macie" version="3.3.0.45" targetFramework="net45" />
+  <package id="AWSSDK.MarketplaceEntitlementService" version="3.3.0.60" targetFramework="net45" />
+  <package id="AWSSDK.MediaConvert" version="3.3.11.5" targetFramework="net45" />
+  <package id="AWSSDK.MediaLive" version="3.3.15.1" targetFramework="net45" />
+  <package id="AWSSDK.MediaPackage" version="3.3.5.20" targetFramework="net45" />
+  <package id="AWSSDK.MediaStore" version="3.3.2.14" targetFramework="net45" />
+  <package id="AWSSDK.MediaStoreData" version="3.3.1.25" targetFramework="net45" />
+  <package id="AWSSDK.MediaTailor" version="3.3.3.15" targetFramework="net45" />
+  <package id="AWSSDK.MigrationHub" version="3.3.1.52" targetFramework="net45" />
+  <package id="AWSSDK.Mobile" version="3.3.0.55" targetFramework="net45" />
+  <package id="AWSSDK.MobileAnalytics" version="3.3.2.30" targetFramework="net45" />
+  <package id="AWSSDK.MQ" version="3.3.3.15" targetFramework="net45" />
+  <package id="AWSSDK.MTurk" version="3.3.3.37" targetFramework="net45" />
+  <package id="AWSSDK.Neptune" version="3.3.4.30" targetFramework="net45" />
+  <package id="AWSSDK.OpsWorks" version="3.3.3.53" targetFramework="net45" />
+  <package id="AWSSDK.OpsWorksCM" version="3.3.6.35" targetFramework="net45" />
+  <package id="AWSSDK.Organizations" version="3.3.9.35" targetFramework="net45" />
+  <package id="AWSSDK.PI" version="3.3.0.47" targetFramework="net45" />
+  <package id="AWSSDK.Pinpoint" version="3.3.12.4" targetFramework="net45" />
+  <package id="AWSSDK.Polly" version="3.3.9.20" targetFramework="net45" />
+  <package id="AWSSDK.Pricing" version="3.3.0.53" targetFramework="net45" />
+  <package id="AWSSDK.RDS" version="3.3.38.2" targetFramework="net45" />
+  <package id="AWSSDK.Redshift" version="3.3.12.6" targetFramework="net45" />
+  <package id="AWSSDK.Rekognition" version="3.3.14.4" targetFramework="net45" />
+  <package id="AWSSDK.ResourceGroups" version="3.3.3.18" targetFramework="net45" />
+  <package id="AWSSDK.ResourceGroupsTaggingAPI" version="3.3.1.58" targetFramework="net45" />
+  <package id="AWSSDK.Route53" version="3.3.18.14" targetFramework="net45" />
+  <package id="AWSSDK.Route53Domains" version="3.3.3.37" targetFramework="net45" />
+  <package id="AWSSDK.S3" version="3.3.31.15" targetFramework="net45" />
+  <package id="AWSSDK.SageMaker" version="3.3.19.5" targetFramework="net45" />
+  <package id="AWSSDK.SageMakerRuntime" version="3.3.1.37" targetFramework="net45" />
+  <package id="AWSSDK.SecretsManager" version="3.3.2.44" targetFramework="net45" />
+  <package id="AWSSDK.SecurityToken" version="3.3.4.50" targetFramework="net45" />
+  <package id="AWSSDK.ServerlessApplicationRepository" version="3.3.4.16" targetFramework="net45" />
+  <package id="AWSSDK.ServerMigrationService" version="3.3.1.16" targetFramework="net45" />
+  <package id="AWSSDK.ServiceCatalog" version="3.3.13.20" targetFramework="net45" />
+  <package id="AWSSDK.ServiceDiscovery" version="3.3.3.16" targetFramework="net45" />
+  <package id="AWSSDK.Shield" version="3.3.5" targetFramework="net45" />
+  <package id="AWSSDK.SimpleDB" version="3.3.0.75" targetFramework="net45" />
+  <package id="AWSSDK.SimpleEmail" version="3.3.7.30" targetFramework="net45" />
+  <package id="AWSSDK.SimpleNotificationService" version="3.3.3.18" targetFramework="net45" />
+  <package id="AWSSDK.SimpleSystemsManagement" version="3.3.38.4" targetFramework="net45" />
+  <package id="AWSSDK.SimpleWorkflow" version="3.3.0.76" targetFramework="net45" />
+  <package id="AWSSDK.Snowball" version="3.3.5.16" targetFramework="net45" />
   <package id="AWSSDK.SQS" version="3.3.3.54" targetFramework="net45" />
+  <package id="AWSSDK.StepFunctions" version="3.3.4.10" targetFramework="net45" />
+  <package id="AWSSDK.StorageGateway" version="3.3.13.5" targetFramework="net45" />
+  <package id="AWSSDK.TranscribeService" version="3.3.7.12" targetFramework="net45" />
+  <package id="AWSSDK.Translate" version="3.3.2.16" targetFramework="net45" />
+  <package id="AWSSDK.WAF" version="3.3.7.12" targetFramework="net45" />
+  <package id="AWSSDK.WAFRegional" version="3.3.7.12" targetFramework="net45" />
+  <package id="AWSSDK.WorkDocs" version="3.3.7.16" targetFramework="net45" />
+  <package id="AWSSDK.WorkMail" version="3.3.1.49" targetFramework="net45" />
+  <package id="AWSSDK.WorkSpaces" version="3.3.6" targetFramework="net45" />
+  <package id="AWSSDK.XRay" version="3.3.5.16" targetFramework="net45" />
+  <package id="EntityFramework" version="6.2.0" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net461" />
+  <package id="System.Data.SQLite" version="1.0.109.1" targetFramework="net45" />
+  <package id="System.Data.SQLite.Core" version="1.0.109.1" targetFramework="net45" />
+  <package id="System.Data.SQLite.EF6" version="1.0.109.0" targetFramework="net45" />
+  <package id="System.Data.SQLite.Linq" version="1.0.109.0" targetFramework="net45" />
 </packages>
