--- a/CloudOps/packages.config
+++ b/CloudOps/packages.config
@@ -2,9 +2,12 @@
 <packages>
   <package id="AWSSDK.ACMPCA" version="3.3.3.3" targetFramework="net45" />
   <package id="AWSSDK.AlexaForBusiness" version="3.3.8.12" targetFramework="net45" />
+  <package id="AWSSDK.Amplify" version="3.3.0.16" targetFramework="net45" />
   <package id="AWSSDK.APIGateway" version="3.3.23.23" targetFramework="net45" />
+  <package id="AWSSDK.ApiGatewayManagementApi" version="3.3.1.3" targetFramework="net45" />
   <package id="AWSSDK.ApplicationAutoScaling" version="3.3.10.45" targetFramework="net45" />
   <package id="AWSSDK.ApplicationDiscoveryService" version="3.3.6.4" targetFramework="net45" />
+  <package id="AWSSDK.AppMesh" version="3.3.0.16" targetFramework="net45" />
   <package id="AWSSDK.AppStream" version="3.3.20.4" targetFramework="net45" />
   <package id="AWSSDK.AppSync" version="3.3.4.16" targetFramework="net45" />
   <package id="AWSSDK.Athena" version="3.3.1.32" targetFramework="net45" />
@@ -14,6 +17,7 @@
   <package id="AWSSDK.AWSMarketplaceCommerceAnalytics" version="3.3.3.67" targetFramework="net45" />
   <package id="AWSSDK.AWSMarketplaceMetering" version="3.3.2.16" targetFramework="net45" />
   <package id="AWSSDK.AWSSupport" version="3.3.0.75" targetFramework="net45" />
+  <package id="AWSSDK.Backup" version="3.3.0.5" targetFramework="net45" />
   <package id="AWSSDK.Batch" version="3.3.7.16" targetFramework="net45" />
   <package id="AWSSDK.Budgets" version="3.3.10.20" targetFramework="net45" />
   <package id="AWSSDK.CertificateManager" version="3.3.5.50" targetFramework="net45" />
@@ -39,6 +43,7 @@
   <package id="AWSSDK.CognitoIdentityProvider" version="3.3.12.12" targetFramework="net45" />
   <package id="AWSSDK.CognitoSync" version="3.3.1.78" targetFramework="net45" />
   <package id="AWSSDK.Comprehend" version="3.3.6.12" targetFramework="net45" />
+  <package id="AWSSDK.ComprehendMedical" version="3.3.0.16" targetFramework="net45" />
   <package id="AWSSDK.ConfigService" version="3.3.22.16" targetFramework="net45" />
   <package id="AWSSDK.Connect" version="3.3.4.14" targetFramework="net45" />
   <package id="AWSSDK.Core" version="3.3.31.7" targetFramework="net45" />
@@ -46,11 +51,13 @@
   <package id="AWSSDK.CostExplorer" version="3.3.9.16" targetFramework="net45" />
   <package id="AWSSDK.DatabaseMigrationService" version="3.3.13.4" targetFramework="net45" />
   <package id="AWSSDK.DataPipeline" version="3.3.0.75" targetFramework="net45" />
+  <package id="AWSSDK.DataSync" version="3.3.0.16" targetFramework="net45" />
   <package id="AWSSDK.DAX" version="3.3.1.40" targetFramework="net45" />
   <package id="AWSSDK.DeviceFarm" version="3.3.13.1" targetFramework="net45" />
   <package id="AWSSDK.DirectConnect" version="3.3.9.17" targetFramework="net45" />
   <package id="AWSSDK.DirectoryService" version="3.3.8.33" targetFramework="net45" />
   <package id="AWSSDK.DLM" version="3.3.1.21" targetFramework="net45" />
+  <package id="AWSSDK.DocDB" version="3.3.0.6" targetFramework="net45" />
   <package id="AWSSDK.DynamoDBv2" version="3.3.17.5" targetFramework="net45" />
   <package id="AWSSDK.EC2" version="3.3.81" targetFramework="net45" />
   <package id="AWSSDK.ECR" version="3.3.5.2" targetFramework="net45" />
@@ -64,9 +71,12 @@
   <package id="AWSSDK.ElasticMapReduce" version="3.3.6.38" targetFramework="net45" />
   <package id="AWSSDK.Elasticsearch" version="3.3.10.32" targetFramework="net45" />
   <package id="AWSSDK.ElasticTranscoder" version="3.3.3.35" targetFramework="net45" />
+  <package id="AWSSDK.Extensions.CognitoAuthentication" version="0.9.4" targetFramework="net45" />
   <package id="AWSSDK.FMS" version="3.3.2.4" targetFramework="net45" />
+  <package id="AWSSDK.FSx" version="3.3.0.16" targetFramework="net45" />
   <package id="AWSSDK.GameLift" version="3.3.12.47" targetFramework="net45" />
   <package id="AWSSDK.Glacier" version="3.3.2.55" targetFramework="net45" />
+  <package id="AWSSDK.GlobalAccelerator" version="3.3.0.17" targetFramework="net45" />
   <package id="AWSSDK.Glue" version="3.3.17.4" targetFramework="net45" />
   <package id="AWSSDK.Greengrass" version="3.3.5.16" targetFramework="net45" />
   <package id="AWSSDK.GuardDuty" version="3.3.5.34" targetFramework="net45" />
@@ -79,9 +89,11 @@
   <package id="AWSSDK.IoTAnalytics" version="3.3.7.9" targetFramework="net45" />
   <package id="AWSSDK.IotData" version="3.3.0.76" targetFramework="net45" />
   <package id="AWSSDK.IoTJobsDataPlane" version="3.3.1.32" targetFramework="net45" />
+  <package id="AWSSDK.Kafka" version="3.3.0.16" targetFramework="net45" />
   <package id="AWSSDK.KeyManagementService" version="3.3.7.16" targetFramework="net45" />
   <package id="AWSSDK.Kinesis" version="3.3.6.41" targetFramework="net45" />
   <package id="AWSSDK.KinesisAnalytics" version="3.3.5.16" targetFramework="net45" />
+  <package id="AWSSDK.KinesisAnalyticsV2" version="3.3.0.16" targetFramework="net45" />
   <package id="AWSSDK.KinesisFirehose" version="3.3.8.12" targetFramework="net45" />
   <package id="AWSSDK.KinesisVideo" version="3.3.1.43" targetFramework="net45" />
   <package id="AWSSDK.KinesisVideoArchivedMedia" version="3.3.1.43" targetFramework="net45" />
@@ -89,10 +101,12 @@
   <package id="AWSSDK.Lambda" version="3.3.19.16" targetFramework="net45" />
   <package id="AWSSDK.Lex" version="3.3.3.52" targetFramework="net45" />
   <package id="AWSSDK.LexModelBuildingService" version="3.3.7.38" targetFramework="net45" />
+  <package id="AWSSDK.LicenseManager" version="3.3.0.16" targetFramework="net45" />
   <package id="AWSSDK.Lightsail" version="3.3.9.4" targetFramework="net45" />
   <package id="AWSSDK.MachineLearning" version="3.3.0.75" targetFramework="net45" />
   <package id="AWSSDK.Macie" version="3.3.0.45" targetFramework="net45" />
   <package id="AWSSDK.MarketplaceEntitlementService" version="3.3.0.60" targetFramework="net45" />
+  <package id="AWSSDK.MediaConnect" version="3.3.1.1" targetFramework="net45" />
   <package id="AWSSDK.MediaConvert" version="3.3.11.5" targetFramework="net45" />
   <package id="AWSSDK.MediaLive" version="3.3.15.1" targetFramework="net45" />
   <package id="AWSSDK.MediaPackage" version="3.3.5.20" targetFramework="net45" />
@@ -110,25 +124,35 @@
   <package id="AWSSDK.Organizations" version="3.3.9.35" targetFramework="net45" />
   <package id="AWSSDK.PI" version="3.3.0.47" targetFramework="net45" />
   <package id="AWSSDK.Pinpoint" version="3.3.12.4" targetFramework="net45" />
+  <package id="AWSSDK.PinpointEmail" version="3.3.1.13" targetFramework="net45" />
+  <package id="AWSSDK.PinpointSMSVoice" version="3.3.2.2" targetFramework="net45" />
   <package id="AWSSDK.Polly" version="3.3.9.20" targetFramework="net45" />
   <package id="AWSSDK.Pricing" version="3.3.0.53" targetFramework="net45" />
+  <package id="AWSSDK.QuickSight" version="3.3.1.12" targetFramework="net45" />
+  <package id="AWSSDK.RAM" version="3.3.0.17" targetFramework="net45" />
   <package id="AWSSDK.RDS" version="3.3.38.2" targetFramework="net45" />
+  <package id="AWSSDK.RDSDataService" version="3.3.1.5" targetFramework="net45" />
   <package id="AWSSDK.Redshift" version="3.3.12.6" targetFramework="net45" />
   <package id="AWSSDK.Rekognition" version="3.3.14.4" targetFramework="net45" />
   <package id="AWSSDK.ResourceGroups" version="3.3.3.18" targetFramework="net45" />
   <package id="AWSSDK.ResourceGroupsTaggingAPI" version="3.3.1.58" targetFramework="net45" />
+  <package id="AWSSDK.RoboMaker" version="3.3.0.16" targetFramework="net45" />
   <package id="AWSSDK.Route53" version="3.3.18.14" targetFramework="net45" />
   <package id="AWSSDK.Route53Domains" version="3.3.3.37" targetFramework="net45" />
+  <package id="AWSSDK.Route53Resolver" version="3.3.0.17" targetFramework="net45" />
   <package id="AWSSDK.S3" version="3.3.31.15" targetFramework="net45" />
+  <package id="AWSSDK.S3Control" version="3.3.0.17" targetFramework="net45" />
   <package id="AWSSDK.SageMaker" version="3.3.19.5" targetFramework="net45" />
   <package id="AWSSDK.SageMakerRuntime" version="3.3.1.37" targetFramework="net45" />
   <package id="AWSSDK.SecretsManager" version="3.3.2.44" targetFramework="net45" />
+  <package id="AWSSDK.SecurityHub" version="3.3.0.16" targetFramework="net45" />
   <package id="AWSSDK.SecurityToken" version="3.3.4.50" targetFramework="net45" />
   <package id="AWSSDK.ServerlessApplicationRepository" version="3.3.4.16" targetFramework="net45" />
   <package id="AWSSDK.ServerMigrationService" version="3.3.1.16" targetFramework="net45" />
   <package id="AWSSDK.ServiceCatalog" version="3.3.13.20" targetFramework="net45" />
   <package id="AWSSDK.ServiceDiscovery" version="3.3.3.16" targetFramework="net45" />
   <package id="AWSSDK.Shield" version="3.3.5" targetFramework="net45" />
+  <package id="AWSSDK.Signer" version="3.3.0.38" targetFramework="net45" />
   <package id="AWSSDK.SimpleDB" version="3.3.0.75" targetFramework="net45" />
   <package id="AWSSDK.SimpleEmail" version="3.3.7.30" targetFramework="net45" />
   <package id="AWSSDK.SimpleNotificationService" version="3.3.3.18" targetFramework="net45" />
@@ -139,10 +163,12 @@
   <package id="AWSSDK.StepFunctions" version="3.3.4.10" targetFramework="net45" />
   <package id="AWSSDK.StorageGateway" version="3.3.13.5" targetFramework="net45" />
   <package id="AWSSDK.TranscribeService" version="3.3.7.12" targetFramework="net45" />
+  <package id="AWSSDK.Transfer" version="3.3.0.16" targetFramework="net45" />
   <package id="AWSSDK.Translate" version="3.3.2.16" targetFramework="net45" />
   <package id="AWSSDK.WAF" version="3.3.7.12" targetFramework="net45" />
   <package id="AWSSDK.WAFRegional" version="3.3.7.12" targetFramework="net45" />
   <package id="AWSSDK.WorkDocs" version="3.3.7.16" targetFramework="net45" />
+  <package id="AWSSDK.WorkLink" version="3.3.0.3" targetFramework="net45" />
   <package id="AWSSDK.WorkMail" version="3.3.1.49" targetFramework="net45" />
   <package id="AWSSDK.WorkSpaces" version="3.3.6" targetFramework="net45" />
   <package id="AWSSDK.XRay" version="3.3.5.16" targetFramework="net45" />
