--- a/Retriever/Retriever.csproj
+++ b/Retriever/Retriever.csproj
@@ -30,7 +30,7 @@
     <ProductName>AWSRetriever</ProductName>
     <PublisherName>AWSRetriever</PublisherName>
     <OpenBrowserOnPublish>false</OpenBrowserOnPublish>
-    <ApplicationRevision>12</ApplicationRevision>
+    <ApplicationRevision>13</ApplicationRevision>
     <ApplicationVersion>0.0.2.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <CreateDesktopShortcut>true</CreateDesktopShortcut>
@@ -78,6 +78,9 @@
     <ApplicationIcon>korra_circle.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AWSSDK.Core, Version=3.3.0.0, Culture=neutral, PublicKeyToken=885c28607f98e604, processorArchitecture=MSIL">
+      <HintPath>..\packages\AWSSDK.Core.3.3.31.7\lib\net45\AWSSDK.Core.dll</HintPath>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.12.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
@@ -131,12 +134,6 @@
     <Compile Include="FormMain.Designer.cs">
       <DependentUpon>FormMain.cs</DependentUpon>
     </Compile>
-    <Compile Include="FormProfiles.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FormProfiles.Designer.cs">
-      <DependentUpon>FormProfiles.cs</DependentUpon>
-    </Compile>
     <Compile Include="FormRun.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -180,9 +177,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormProfileEditor.resx">
       <DependentUpon>FormProfileEditor.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="FormProfiles.resx">
-      <DependentUpon>FormProfiles.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormRun.resx">
       <DependentUpon>FormRun.cs</DependentUpon>
