--- a/Retriever/packages.config
+++ b/Retriever/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AWSSDK.Core" version="3.3.31.7" targetFramework="net45" />
+  <package id="FluentCommandLineParser" version="1.4.3" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net45" />
 </packages>
