improving error message when service not found in region

--- a/CloudOps/CloudOps.csproj
+++ b/CloudOps/CloudOps.csproj
@@ -581,6 +581,7 @@
   <ItemGroup>
     <Compile Include="CloudObject.cs" />
     <Compile Include="CloudObjectFields.cs" />
+    <Compile Include="CloudOpsException.cs" />
     <Compile Include="Generated\RDS\DescribeEventsOperation.cs" />
     <Compile Include="Generated\RDS\DescribeEventSubscriptionsOperation.cs" />
     <Compile Include="Generated\SecurityHub\GetFindingsOperation.cs" />
